# website_traffic-etl-gcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_old.md  env.cloudrun.example  pyproject.toml  requirements-dev.txt  requirements.txt  task-1.ipynb  task-1.py
.github/workflows/: ci.yml
data/: traffic_spreadsheet.csv
src/etl/: __init__.py  __main__.py  config.py  extract.py  load.py  logging_config.py  transform.py
tests/: conftest.py  test_config.py  test_extract.py  test_transform.py
